homework2/vpc.tf
resource "aws_vpc" "Whiskeyword" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  tags = {
    Name = "Whiskeyword"
  }
}
